app/graph.css
body, html {
	background-color: #1f5a6b !important;
}
.znd-graph {
	position: relative;
}

.znd-graph > div {
  position: relative;
}

.znd-graph .canvas-area line, .znd-graph .canvas-timeline line, .znd-graph .bar, .znd-graph .canvas-piegraph line {
	stroke: #317183;
  stroke-width: 1px;
	shape-rendering: optimizeSpeed;
}

.znd-graph .canvas-piegraph line {
  stroke: black;
  stroke-opacity: 0.1;
}

.znd-graph line.bar-bg, .znd-graph line.bar {
  stroke-linecap: round;
  stroke-width: 8px;
  stroke: #317183;
  shape-rendering: optimizeSpeed;
}

.znd-graph line.bar {
  stroke: white;
}

.znd-graph .canvas-timeline {
  top: -4px;
}

.znd-graph .domain {
  display: none;
}

.znd-graph svg {
	position: relative;
}


.znd-graph circle.point {
	z-index: 100;
	stroke: white;
}

.znd-graph rect.tooltip {
	fill: white;
}


.znd-graph .axis-x text, .znd-graph text.heading {
  font-size: 20px;
  fill: white;
  stroke: none !important;
}

#graph h3 {
	color: white;
	font-size: 16px;
	font-weight: normal;
	text-align: center;
}

.bar-title {
	margin-top: 10px;
	padding-bottom: 10px;
}

.timeline-title {
	margin-top: 10px;
}

.znd-graph text.heading {
  font-size: 18px;
}

.znd-graph .axis-x .tick line {
  display: none;
}

.znd-graph .axis-x-support text {
  font-size: 12px;
  fill: #398192
}

.znd-graph .axis-y text, .label {
  font-size: 10px;
  font-weight: 100;
  fill: white;
}

.znd-graph .labelgroup-left .label {
  text-anchor: start;
}


.znd-graph .labelgroup-right .label {
  text-anchor: end;
}

.znd-graph .canvas-piegraph .axis-x text {
  font-size: 10px;
}

.znd-graph h2 {
  position: absolute;
  text-align: center;
}

.znd-graph .navigable {
  position: relative;
}

.znd-graph .navigable .pan {
  display: block;
  position: absolute;
  height: 100%;
  width: 40px;
  color: white;
  font-size: 2em;
  background-color: #4992A1;
  opacity: 0.5;
  top: 0;
  z-index: 10;
  vertical-align: middle;
  cursor: pointer;
}

/*.znd-graph .navigable .pan:hover {
  opacity: 0.5;
}*/

.znd-graph .pan span {
  display: block;
  position: absolute;
  top: 50%;
  width: 100%;
  margin-top: -1em;
  text-align: center;
}

.znd-graph .pan.backward {
  left: 0;
}

.znd-graph .pan.forward {
  right: 0;
}


.tooltip-timeline * {
  display: block;
  line-height: 1.5em;
  color: black;
  font-weight: normal;
}

.tooltip-timeline .company {
  font-weight: bold;
  font-style: normal;
}

.tooltip-timeline .position {
}

.tooltip-timeline .ranges {
  color: #7cb8c4;

}

/* D3 tips */

.d3-tip {
  line-height: 1;
  font-weight: bold;
  padding: 6px;
  background-color: white;
  /*color: #315B68;*/
  border-radius: 3px;
  z-index: 1000;
  width: auto !important;
  font-size: 11px;
  box-shadow: 2px 2px 1px -1px rgba(0,0,0,0.6);
}

.d3-tip-custom {
  position: absolute;
  display: none;
}

/* Creates a small triangle extender for the tooltip */
.d3-tip:after {
  box-sizing: border-box;
  display: inline;
  font-size: 10px;
  width: 100%;
  line-height: 0.5;
  color: white;
  content: "\25BC";
  position: absolute;
  text-align: center;
}

/* Style northward tooltips differently */
.d3-tip.w:after {
  margin: -1px 0 0 0;
  top: 50%;
  left: 52%;
  transform: rotate(-90deg);
}

.d3-tip.n:after {
  margin: -1px 0 0 0;
  bottom: -5px;
  left: 0%;
}

.d3-tip.s:after {
  margin: -1px 0 0 0;
  top: -5px;
  left: 0%;
  transform: rotate(180deg);
}

.d3-tip.e:after {
  margin: -1px 0 0 0;
  top: 50%;
  left: -52%;
  transform: rotate(90deg);
}


.d3-tip ul {
  display: block;
  max-width: 180px;
  list-style-type: none;
  width: auto !important;
  padding: 0;
  margin: 0;
  top: -.3em;
  position: relative;
}

.d3-tip ul li {
  line-height: .9em;
  vertical-align: baseline;
  display: table;
  width: 100%;
}

.d3-tip ul li > * {
  display: table-cell;
}

.d3-tip ul li .bullet {
  width: 1.3em;
}

.d3-tip ul li .bullet span {
  font-size: 3.5em;
  display: block;
  top: .26em;
  position: relative;
}

.d3-tip ul li .company {
  font-style: normal;
  padding-left: .2em;
  padding-right: .4em;
}

.d3-tip ul li .amount {
  text-align: right;
  padding-right: .2em;
  font-weight: normal;
}

#years h3 {
  color: white;
}

.toggle {
  margin: 1.5em;
}

.navigable {
  margin-top: 1em;
}

#graph {
	width: 100%;
	background-color: #1f5a6b
}

#graph h3 {
	display: none;
}


@media screen and (max-width: 768px) {
	.canvas-timeline text.label {
		font-size: 13px;
	}

	.canvas-timeline .headers-text text {
		font-size: 15px;
	}

	#graph h3 {
		display: block;
	}
}

